# Fireflies

./: CMakeLists.txt  CMakePresets.json  README.md  setup_fireflies.bat
Fireflies_BIN/Autodesk/env/: mayaLog
Fireflies_BIN/Autodesk/env/2024/prefs/: pluginPrefs.mel  userPrefs.mel  userPrefs_panelConfig.mel  userPrefs_recents.mel  windowPrefs.mel
Fireflies_BIN/Autodesk/env/2025/prefs/: pluginPrefs.mel  userPrefs.mel  userPrefs_panelConfig.mel  userRunTimeCommands.mel  windowPrefs.mel
Fireflies_BIN/Autodesk/env/scripts/: userSetup.py
Fireflies_BIN/Autodesk/env/shelfs/: shelf_Fireflies.mel  shelf_Fireflies_dev.mel
Fireflies_BIN/Sidefx/env/: houdini.env  launch_houdini_205.bat
Fireflies_BIN/Sidefx/otls/: lop_chris.VARIANT_GENERATOR.1.0.hdanc
Fireflies_BIN/Sidefx/toolbar/: MainMenuCommon.xml
Fireflies_BIN/fireflies/context/: context_window.py
Fireflies_BIN/fireflies/fireflies_utils/: setup.py
Fireflies_BIN/fireflies/fireflies_utils/auto_sync/: test.py  updater.bat
Fireflies_BIN/fireflies/fireflies_utils/fireflies_utils.egg-info/: PKG-INFO  SOURCES.txt
Fireflies_BIN/fireflies/fireflies_utils/test/: test_print.py
Fireflies_BIN/fireflies/maya/: fireflies_menu.py  maya_to_usd_converter_qt.py
Fireflies_BIN/fireflies/maya/usd_import_export_maya/: demo_pipe.py
Fireflies_BIN/fireflies/publish_usd/: create_usd_asset.py  validate_publish.py
Fireflies_BIN/scripts_py_installs/maya/: install_maya_fireflies.py  maya_2025_install_fireflies.bat
Fireflies_BIN/utils_py/launch_softs/: launch_maya.bat
include/: readme.md
include/headers/: launch_softs.h  test.h
source/: launch_softs.cpp  main.cpp
(+47 files in other folders)
